--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
+
+.input {
+    @apply px-3 py-2 text-sm transition duration-300 ease-in-out border-2 rounded-sm focus:outline-none hover:bg-gray-100 focus:border-blue-600;
+}
+
 @tailwind utilities;
